@@ -5,6 +5,16 @@ Project site:     http://code.google.com/p/google-api-objectivec-client/
 Discussion group: http://groups.google.com/group/google-api-objectivec-client
 
 
+15-September-2011
+
+Added interfaces for Google Plus.
+
+
+13-September-2011
+
+Added interfaces for Blogger.
+
+
 7-September-2011
 
 Added generated interfaces for Google Analytics.
